[gd_scene load_steps=5 format=3 uid="uid://cg28vjfqieo2u"]

[ext_resource type="Theme" uid="uid://rhcgh2v8xs3h" path="res://scenes/ui/game_theme.tres" id="1_ofmg3"]
[ext_resource type="Texture2D" uid="uid://bldxvi5dvro6k" path="res://graphics/icons/apple.png" id="2_8g3bp"]
[ext_resource type="Script" uid="uid://dk5fgbxdt1yfe" path="res://scenes/ui/shop_button.gd" id="2_ehfxd"]
[ext_resource type="Texture2D" uid="uid://bsx0onkeirxbt" path="res://graphics/icons/corn.png" id="3_go8fd"]

[node name="ShopButton" type="Button"]
clip_children = 1
custom_minimum_size = Vector2(200, 250)
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ofmg3")
script = ExtResource("2_ehfxd")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FocusPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.23137255, 1, 0.30980393, 1)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8g3bp")
stretch_mode = 5

[node name="Control" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Control"]
layout_mode = 2
size_flags_vertical = 6
text = "Apple"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/Control"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/Control/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Control/Control/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_go8fd")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Control/Control/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Control/Control/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Control/Control/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_go8fd")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Control/Control/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "5"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
